[metadata]
name = alphafold_ibex
version = 1.0.0
author = Francisco Guzman
author_email = francisco.guzmanvega@kaust.edu.sa
description = A wrapper for AlphaFold
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/strubelab/alphafold_ibex
license_files = LICENSE.txt

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# package_dir =
#     = example_wrapper
packages = find:
python_requires = >=3.6
scripts =
    bin/alphafold_wrapper
    bin/make_features
    bin/make_complexes
    bin/make_homomers
    bin/score_complexes
    bin/make_monomers
    bin/get_quality_scores
    bin/pdockq

# [options.packages.find]
# where = example_wrapper

# [options.entry_points]
# console_scripts =
#     wrapper-function = package.subpackage.module:object.object